# relate

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  DOCKER_DEV_GUIDE.md  ENV_GUIDE.md  Makefile  PROJECT_OVERVIEW.md  README.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  relate.code-workspace  setup.sh
agent/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  langgraph.json  main.py  pyproject.toml  run_eval.py  test_eval_structure.py
agent/app/: __init__.py  agent.py  main.py  memory.py  prompts.py  runner.py  state.py  tools.py
agent/eval/: __init__.py
agent/eval/e2e_tests/: __init__.py  evaluate_research_e2e.py  evaluation_prompts.py  research_e2e_dataset.py
agent/eval/scripts/: run_all_evaluations.py  run_classification_only.py  run_e2e_only.py
agent/eval/unit_tests/: __init__.py  classification_dataset.py  evaluate_classification.py
agent/eval/utils/: __init__.py  evaluation_helpers.py  langsmith_client.py  visualization.py
agent/notebooks/: playground.ipynb
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  models.py  routes.py  streaming.py  thread_manager.py  utils.py
docker/postgres/init/: 01-init.sql
docker/redis/: redis.conf
infra/: plan.md
web/: .dockerignore  .env.example  .prettierignore  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/app/: app.css
(+62 files in other folders)
