[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.116.0",
    "langgraph>=0.5.1",
    "langgraph-sdk>=0.1.72",
    "ruff>=0.8.0",
    "uvicorn>=0.35.0",
]
